# abstime-python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/abstime/: __init__.py  _client.py  _errors.py  _models.py  _shared.py  _transport.py
tests/: test_client.py  test_resolution.py
